{
  "version": 4,
  "terraform_version": "1.2.2",
  "serial": 131,
  "lineage": "dc88d3cc-cfb8-2e23-e5bf-ebe0776ed8ea",
  "resources": [
    {
      "module": "module.gabriel08",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:165536781418:internet-gateway/igw-00e990c2f8b2a4ff9",
            "id": "igw-00e990c2f8b2a4ff9",
            "owner_id": "165536781418",
            "tags": {
              "Name": "gabriel-08",
              "env": "prod",
              "projeto": "vpc"
            },
            "tags_all": {
              "Name": "gabriel-08",
              "env": "prod",
              "projeto": "vpc"
            },
            "vpc_id": "vpc-0e30f38f65495e913"
          },
          "dependencies": [
            "module.gabriel08.aws_vpc.this",
            "module.gabriel08.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.gabriel08",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-00e990c2f8b2a4ff9",
            "id": "r-rtb-07d6571cbdda77c0b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07d6571cbdda77c0b",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.gabriel08.aws_internet_gateway.this",
            "module.gabriel08.aws_route_table.public",
            "module.gabriel08.aws_vpc.this",
            "module.gabriel08.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.gabriel08",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:165536781418:route-table/rtb-07d6571cbdda77c0b",
            "id": "rtb-07d6571cbdda77c0b",
            "owner_id": "165536781418",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "gabriel-08-public",
              "env": "prod",
              "projeto": "vpc"
            },
            "tags_all": {
              "Name": "gabriel-08-public",
              "env": "prod",
              "projeto": "vpc"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e30f38f65495e913"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.gabriel08.aws_vpc.this",
            "module.gabriel08.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.gabriel08",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-069af6a9ab795a443",
            "route_table_id": "rtb-07d6571cbdda77c0b",
            "subnet_id": "subnet-0d2df08e12af8a50b"
          },
          "dependencies": [
            "module.gabriel08.aws_route_table.public",
            "module.gabriel08.aws_subnet.public",
            "module.gabriel08.aws_vpc.this",
            "module.gabriel08.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07f6fd1970c42ba16",
            "route_table_id": "rtb-07d6571cbdda77c0b",
            "subnet_id": "subnet-0f20c16c93c82b331"
          },
          "dependencies": [
            "module.gabriel08.aws_route_table.public",
            "module.gabriel08.aws_subnet.public",
            "module.gabriel08.aws_vpc.this",
            "module.gabriel08.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.gabriel08",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:165536781418:subnet/subnet-0d2df08e12af8a50b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.100.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d2df08e12af8a50b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "165536781418",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "gabriel-08-public-us-east-1a",
              "env": "prod",
              "projeto": "vpc"
            },
            "tags_all": {
              "Name": "gabriel-08-public-us-east-1a",
              "env": "prod",
              "projeto": "vpc"
            },
            "vpc_id": "vpc-0e30f38f65495e913"
          },
          "dependencies": [
            "module.gabriel08.aws_vpc.this",
            "module.gabriel08.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:165536781418:subnet/subnet-0f20c16c93c82b331",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.104.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f20c16c93c82b331",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "165536781418",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "gabriel-08-public-us-east-1b",
              "env": "prod",
              "projeto": "vpc"
            },
            "tags_all": {
              "Name": "gabriel-08-public-us-east-1b",
              "env": "prod",
              "projeto": "vpc"
            },
            "vpc_id": "vpc-0e30f38f65495e913"
          },
          "dependencies": [
            "module.gabriel08.aws_vpc.this",
            "module.gabriel08.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.gabriel08",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:165536781418:vpc/vpc-0e30f38f65495e913",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b91ec7cead6e4278",
            "default_route_table_id": "rtb-0a0e6982ad57adfef",
            "default_security_group_id": "sg-09743aa10ba60dd8c",
            "dhcp_options_id": "dopt-0a62100430b7875bd",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0e30f38f65495e913",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a0e6982ad57adfef",
            "owner_id": "165536781418",
            "tags": {
              "Name": "gabriel-08",
              "env": "prod",
              "projeto": "vpc"
            },
            "tags_all": {
              "Name": "gabriel-08",
              "env": "prod",
              "projeto": "vpc"
            }
          }
        }
      ]
    }
  ]
}